fix mobile footer nav wrapping

--- a/app/components/Footer/index.module.css
+++ b/app/components/Footer/index.module.css
@@ -80,5 +80,6 @@
   }
   .navFooter {
     grid-row: 4;
+    justify-content: center;
   }
 }
